Begin port to 1.21.1
TODO: armor material, capability registration, codecs, item components, networking, fix recipe datagen, etc.